# czur-sdk-open

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  README_ZH.md
.githooks/: commit-msg  pre-commit
.github/workflows/: license-headers.yml
application/: admin_application_service.cpp  admin_application_service.h  authorization_service.cpp  authorization_service.h  capture_pipeline_service.cpp  capture_pipeline_service.h  capture_task_service.cpp  capture_task_service.h  command_application_service.cpp  command_application_service.h  image_enhance_task_service.cpp  image_enhance_task_service.h  runtime_config_service.cpp  runtime_config_service.h  runtime_record_service.cpp  runtime_record_service.h  video_session_service.cpp  video_session_service.h
doc/: CHANGELOG.md  CHANGELOG_ZH.md  COMMAND_CHANNEL_FLOW.md  COMMAND_CHANNEL_FLOW_ZH.md  ERROR_CODES.md  ERROR_CODES_ZH.md  RUNTIME_ARCHITECTURE_ZH.md
facade/: device_facade.cpp  device_facade.h  graphic_facade.cpp  graphic_facade.h  ocr_facade.cpp  ocr_facade.h  ofd_facade.cpp  ofd_facade.h  recognition_facade.cpp  recognition_facade.h  sane_facade.cpp  sane_facade.h
frontend/admin-site/: DESIGN.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
frontend/admin-site/src/: App.vue  main.ts  styles.css
frontend/admin-site/src/components/blocks/: PlaceholderModulePage.vue  SectionPanel.vue
frontend/admin-site/src/components/cards/: EntryCard.vue  InfoCard.vue  MetricCard.vue  StatusBadge.vue
frontend/admin-site/src/components/layout/: AppHeader.vue  AppShell.vue  AppSidebar.vue  NavigationIcon.vue
frontend/admin-site/src/data/: adminApp.ts
frontend/admin-site/src/i18n/: index.ts  messages.ts
frontend/admin-site/src/pages/: AuthPage.vue  ConfigPage.vue  DashboardOverviewPage.vue  LogPage.vue  RecordsPage.vue  SystemInfoConfigPage.vue  WebSocketServicesPage.vue
frontend/admin-site/src/router/: index.ts
frontend/admin-site/src/services/: admin-api.ts  command-session.ts  license-hub-client.ts
frontend/admin-site/src/types/: admin.ts
frontend/demo-site/: index.html  package.json  pnpm-lock.yaml  vite.config.ts
frontend/demo-site/src/: App.vue  styles.css
frontend/demo-site/src/components/blocks/: DataTableCard.vue  EventTimeline.vue  ImageEnhanceWorkflowPicker.vue  ImageViewer.vue  JsonPanel.vue  KeyValueGrid.vue  PreviewStage.vue  SectionPanel.vue
frontend/demo-site/src/components/cards/: InfoCard.vue  MetricCard.vue  StatusPill.vue
frontend/demo-site/src/components/layout/: ApiKeyDialog.vue  AppHeader.vue  AppShell.vue  AppSidebar.vue  GlobalResultsDrawer.vue  NavigationIcon.vue
frontend/demo-site/src/data/: demoSite.ts  sane_i18n_zh.json
frontend/demo-site/src/i18n/: index.ts  messages.ts
frontend/demo-site/src/pages/: CaptureAcquisitionPage.vue  ConnectionAuthPage.vue  DeviceVideoPage.vue  EventsResultsPage.vue  FileConversionPage.vue  ImageEnhancementPage.vue  ImageProcessingPage.vue  OcrRecognitionPage.vue  ProtocolDebuggerPage.vue  QuickStartPage.vue  SaneScanningPage.vue
frontend/demo-site/src/router/: index.ts
frontend/demo-site/src/services/: auth-session.ts  device-inventory.ts  device-video.ts  image-enhance-workflows.ts  image-viewer.ts  protocol.ts  runtime-records.ts  ws-client.ts
frontend/demo-site/src/types/: demo.ts
frontend/demo-site/src/utils/: presentation.ts
interfaces/: i_sdk_auth_provider.h  i_sdk_device_provider.h  i_sdk_graphic_provider.h  i_sdk_image_enhance_provider.h  i_sdk_ocr_provider.h  i_sdk_ofd_provider.h  i_sdk_recognition_provider.h  i_sdk_sane_provider.h  sdk_auth_types.h  sdk_entitlement_policy.cpp  sdk_entitlement_policy.h  sdk_provider_bundle.h  sdk_provider_types.h  sdk_status_code.h
providers/mock/: mock_provider_factory.cpp  mock_provider_factory.h
providers/private_windows/: private_windows_provider_factory.cpp  private_windows_provider_factory.h
runtime/: sdk_app.cpp  sdk_app.h  sdk_command_dispatcher.cpp  sdk_command_dispatcher.h  sdk_config.cpp  sdk_config.h  sdk_http_server.cpp  sdk_http_server.h  sdk_json_utils.cpp  sdk_json_utils.h  sdk_logger.cpp  sdk_logger.h  sdk_open_main.cpp  sdk_open_version.h.in  sdk_runtime_paths.cpp  sdk_runtime_paths.h  sdk_windows_compat.h  sdk_ws_command_server.cpp  sdk_ws_command_server.h  sdk_ws_video_server.cpp  sdk_ws_video_server.h
scripts/: check_commit_message.sh  check_license_headers.sh  fix_license_headers.sh  install_git_hooks.sh  test_windows_service.ps1
transport/: sdk_http_server.cpp  sdk_http_server.h  sdk_ws_command_server.cpp  sdk_ws_command_server.h  sdk_ws_video_server.cpp  sdk_ws_video_server.h
